# staticauth

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deps-check.yml  docs.yml  frontend.yml  lint.yml  smoke-test.yml  test.yml
deploy/infra/: .env-staticauth.example  README.md  deploy.sh  nginx-docs-server.conf  nginx-routing-server.conf  setup.sh  staticauth.service
deploy/nginx/: docs-server.conf  routing-server.conf
deploy/systemd/: gatekeeper.service  staticauth.service
deployment/: README.md
deployment/nginx/: README.md  gatekeeper-server.conf  gatekeeper.conf  protected-app.conf  routing-protected-app.conf  routing.conf
deployment/systemd/: README.md  gatekeeper.service
docs/: README.md  conf.py
docs/source/: index.md
docs/source/getting-started/: configuration.md  first-app.md  index.md
docs/source/guides/: apps.md  deployment.md  email.md  index.md  users.md
docs/source/reference/: api.md  cli.md  environment.md  index.md
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/.astro/: settings.json
frontend/src/components/: AppCard.tsx  AuthContext.tsx  HomePage.tsx  PublicAppsList.tsx  RequestAccessModal.tsx  SettingsPage.tsx  TopBar.tsx
frontend/src/components/admin/: AddUserModal.tsx  AdminDashboard.tsx  AdminPage.tsx  AppManagement.tsx  ApprovalsTab.tsx  PendingRegistrations.tsx  UserList.tsx
frontend/src/components/auth/: AccountPage.tsx  DeleteAccount.tsx  OTPInput.tsx  PasskeyButton.tsx  PasskeyManager.tsx  RegisterForm.tsx  SignInForm.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  label.tsx  switch.tsx
frontend/src/layouts/: AuthenticatedLayout.astro  Layout.astro
frontend/src/lib/: api.ts
frontend/src/pages/: account.astro  index.astro  passkeys.astro  register.astro  settings.astro  signin.astro  signout.astro
frontend/src/pages/admin/: index.astro
nginx/: README.md  app-internal.conf  app-proxy.conf  app.conf  docs-static.conf  gatekeeper-internal.conf  gatekeeper-proxy.conf  gatekeeper.conf  gatekeeper.service
src/gatekeeper/: __init__.py  cli.py  config.py  database.py  main.py
src/gatekeeper/api/: deps.py
src/gatekeeper/api/v1/: admin.py  auth.py  router.py
src/gatekeeper/cli/: ops.py
src/gatekeeper/db/: __init__.py  migrate.py
src/gatekeeper/db/migrations/: 001_init.sql  002_add_app_fields.sql  003_add_multi_app.sql  004_add_notify_private_requests.sql  004_add_user_name.sql  005_add_app_access_requests.sql  README.md
src/gatekeeper/models/: __init__.py  app.py  email_suppression.py  otp.py  passkey.py  session.py  user.py
src/gatekeeper/schemas/: __init__.py  admin.py  app.py  auth.py  user.py
src/gatekeeper/services/: __init__.py  email.py  otp.py  passkey.py  session.py
src/gatekeeper/utils/: __init__.py  security.py
src/staticauth/: cli.py  config.py  database.py  main.py
src/staticauth/api/: deps.py
src/staticauth/api/v1/: admin.py  auth.py  router.py
src/staticauth/db/: migrate.py
src/staticauth/db/migrations/: 001_init.sql
src/staticauth/models/: __init__.py  email_suppression.py  otp.py  passkey.py  session.py  user.py
src/staticauth/schemas/: __init__.py  admin.py  auth.py  user.py
src/staticauth/services/: __init__.py  email.py  otp.py  passkey.py  session.py
src/staticauth/utils/: __init__.py  security.py
tests/: test_multi_app.py
