[project]
name = "staticauth"
version = "0.1.0"
description = "Static authentication service for engineering docs"
readme = "README.md"
requires-python = ">=3.12"
license
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "greenlet>=3.0.0,<4.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "boto3>=1.34.0,<2.0.0",
    "aiosmtplib>=3.0.0,<4.0.0",
    "webauthn>=2.0.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
]
license = "MIT"

[project.scripts]
staticauth = "staticauth.cli:serve"
all-migrations = "staticauth.db.migrate:run_all"
migrations = "staticauth.db.migrate:run_single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/staticauth"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
