[project]
name = "gatekeeper"
version = "0.1.0"
description = "Static authentication service for engineering docs"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "greenlet>=3.0.0,<4.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "boto3>=1.34.0,<2.0.0",
    "aiosmtplib>=3.0.0,<6.0.0",
    "webauthn>=2.0.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "slowapi>=0.1.9",
    "typer>=0.21.1",
    "psycopg2-binary>=2.9.0,<3.0.0",
]

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "linkify-it-py>=2.0.3",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-togglebutton>=0.4.4",
]

dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]

[project.scripts]
gk = "gatekeeper.cli:main"
gatekeeper = "gatekeeper.cli.ops:serve"
all-migrations = "gatekeeper.db.migrate:run_all"
migrations = "gatekeeper.db.migrate:run_single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gatekeeper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "FLY",    # flynt (string formatting)
    "RUF",    # Ruff-specific rules
    "ICN",    # flake8-import-conventions
]

[tool.ruff.lint.per-file-ignores]
# HTML email templates have long CSS lines that can't be reasonably broken
"src/gatekeeper/services/email.py" = ["E501"]
# FastAPI uses Query() defaults and dependency injection for auth (intentionally unused args)
"src/gatekeeper/api/**/*.py" = ["B008", "ARG001"]
# Pytest fixtures are injected by name, not always used directly
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]